# wechat-bot-cursor

./: .gitignore  README.md  pyproject.toml  setup.py
src/wx_claw_bot/: __init__.py  __main__.py  bot.py  cli.py  config.py  security.py
src/wx_claw_bot/auth/: __init__.py  credentials.py  qr_login.py
src/wx_claw_bot/bridge/: __init__.py  cursor_agent.py
src/wx_claw_bot/ilink/: __init__.py  client.py  types.py
tests/: __init__.py  test_bridge.py  test_config.py  test_ilink.py  test_security.py
