[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wx-claw-bot"
version = "0.1.0"
description = "WeChat ilink (ClawBot) long-poll bridge to Cursor Agent CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wx-claw-bot contributors" }]
# 收紧下界并显式声明部分传递依赖，减少旧版 pip 在全局环境中对 certifi 等包的长时间回溯解析。
dependencies = [
    "httpx>=0.28.0,<1",
    "httpcore>=1.0.0,<2",
    "certifi>=2024.7.4",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.10.0,<3",
    "qrcode>=8.0,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<0.27",
]

[project.scripts]
wx-claw-bot = "wx_claw_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
